# indico-sso-plugin

./: README.md  hatch_build.py  pyproject.toml
indico_wipac_sso_groups/: __init__.py  plugin.py  task.py
